# grgry

./: .releaserc  Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: commands.rs  config.rs  git_providers.rs  github.rs  gitlab.rs  lib.rs  main.rs
src/cli/: alias.rs  clone.rs  commands.rs  main.rs  mass.rs  mod.rs  profile.rs  quick.rs  update.rs
src/config/: config.rs
src/git/: github.rs  gitlab.rs  mod.rs
src/git_api/: git_providers.rs  github.rs  gitlab.rs  mod.rs
src/utils/: cmd.rs  helper.rs  mod.rs
