[package]
name = "grgry"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
config-file = "0.2.3"
inquire = "0.7.5"
toml_edit = "0.22.20"
walkdir = "2.3"
regex = "1.7"
rayon = "1.7"
lazy_static = "1.4.0"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] } 
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
dirs = "5.0"
futures = "0.3"
colored = "2"